--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -52,59 +52,40 @@ jobs:
           rm -rf ./predict ./out
           mkdir -p ./predict ./out
 
-      # ---- predict: TOPNのみを ./predict に出力（毎回上書き） ----
       - name: Predict (TOPN, same engine as eval)
         if: ${{ github.event.inputs.mode == 'predict' }}
-        run: |
-          python sims_batch_eval_SimS_v1.py \
-            --base ./public \
-            --dates "${{ github.event.inputs.dates }}" \
-            --sims  "${{ github.event.inputs.sims }}" \
-            --topn  "${{ github.event.inputs.topn }}" \
-            --pids  "${{ github.event.inputs.pids }}" \
-            --races "${{ github.event.inputs.races }}" \
-            --limit "${{ github.event.inputs.limit }}" \
-            --predict-only
+        run: >
+          python sims_batch_eval_SimS_v1.py
+          --base ./public
+          --dates "${{ github.event.inputs.dates }}"
+          --sims "${{ github.event.inputs.sims }}"
+          --topn "${{ github.event.inputs.topn }}"
+          --pids "${{ github.event.inputs.pids }}"
+          --races "${{ github.event.inputs.races }}"
+          --limit "${{ github.event.inputs.limit }}"
+          --predict-only
 
-      # ---- Discord 送信用の本文を生成（18点は 1-2-3/5 形式で圧縮） ----
       - name: Build Discord message (compact tickets)
         if: ${{ github.event.inputs.mode == 'predict' }}
         env:
-          TOPN:  ${{ github.event.inputs.topn }}
-          SIMS:  ${{ github.event.inputs.sims }}
-          DATES: ${{ github.event.inputs.dates }}
-          PIDS:  ${{ github.event.inputs.pids }}
-          RACES: ${{ github.event.inputs.races }}
-        run: |
-          python scripts/build_discord_message.py
+          TOPN:  "${{ github.event.inputs.topn }}"
+          SIMS:  "${{ github.event.inputs.sims }}"
+          DATES: "${{ github.event.inputs.dates }}"
+          PIDS:  "${{ github.event.inputs.pids }}"
+          RACES: "${{ github.event.inputs.races }}"
+        run: python scripts/build_discord_message.py
 
-      # ---- Discord に本文 + CSV を通知（heredoc不使用） ----
       - name: Notify Discord (predict)
         if: ${{ github.event.inputs.mode == 'predict' }}
         env:
           WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        run: |
-          if [ -z "$WEBHOOK" ]; then
-            echo "DISCORD_WEBHOOK_URL is not set. Skip notify."
-            exit 0
-          fi
-          if [ ! -s "./predict/discord_message.txt" ]; then
-            echo "No discord_message.txt. Skip notify."
-            exit 0
-          fi
-          # 本文をJSON化（Pythonワンライナーのみ・heredoc無し）
-          JSON_PAYLOAD=$(python -c "import json,io;print(json.dumps({'content': io.open('./predict/discord_message.txt','r',encoding='utf-8').read()}))")
-          echo "$JSON_PAYLOAD" | curl -sS -H "Content-Type: application/json" -X POST -d @- "$WEBHOOK" || true
+        run: >
+          [ -z "$WEBHOOK" ] && echo "No webhook" && exit 0;
+          [ ! -s "./predict/discord_message.txt" ] && echo "No message" && exit 0;
+          JSON_PAYLOAD=$(python -c "import json,io;print(json.dumps({'content': io.open('./predict/discord_message.txt','r',encoding='utf-8').read()}))");
+          echo "$JSON_PAYLOAD" | curl -sS -H "Content-Type: application/json" -X POST -d @- "$WEBHOOK" || true;
+          [ -s "./predict/predictions_summary.csv" ] && curl -sS -X POST -F 'payload_json={"content":"predictions_summary.csv を添付します"}' -F "file1=@./predict/predictions_summary.csv" "$WEBHOOK" || true
 
-          # CSV 添付
-          if [ -s "./predict/predictions_summary.csv" ]; then
-            curl -sS -X POST \
-              -F 'payload_json={"content":"predictions_summary.csv を添付します"}' \
-              -F "file1=@./predict/predictions_summary.csv" \
-              "$WEBHOOK" || true
-          fi
-
-      # ---- predict をリポジトリにコミット & プッシュ ----
       - name: Commit predict folder to repo
         if: ${{ github.event.inputs.mode == 'predict' }}
         run: |
@@ -126,18 +107,17 @@ jobs:
           path: ./predict
           if-no-files-found: error
 
-      # ---- eval: ROI集計を ./out に出力 ----
       - name: Eval (ROI)
         if: ${{ github.event.inputs.mode == 'eval' }}
-        run: |
-          python sims_batch_eval_SimS_v1.py \
-            --base ./public \
-            --dates "${{ github.event.inputs.dates }}" \
-            --sims  "${{ github.event.inputs.sims }}" \
-            --topn  "${{ github.event.inputs.topn }}" \
-            --unit  "${{ github.event.inputs.unit }}" \
-            --limit "${{ github.event.inputs.limit }}" \
-            --outdir ./out
+        run: >
+          python sims_batch_eval_SimS_v1.py
+          --base ./public
+          --dates "${{ github.event.inputs.dates }}"
+          --sims "${{ github.event.inputs.sims }}"
+          --topn "${{ github.event.inputs.topn }}"
+          --unit "${{ github.event.inputs.unit }}"
+          --limit "${{ github.event.inputs.limit }}"
+          --outdir ./out
 
       - name: Upload eval artifact
         if: ${{ github.event.inputs.mode == 'eval' }}
