--- a/.github/workflows/schedules_v1.yml
+++ b/.github/workflows/schedules_v1.yml
@@ -7,9 +7,9 @@ on:
         description: "YYYYMMDD（空なら programs/v2 配下の全日付をビルド）"
         required: false
   schedule:
-    - cron: "00 22 * * *"  # JST 07:00（UTC 22:00）に日次実行
+    - cron: "00 22 * * *"  # JST 07:00
 
-# 重要：botに書き込み権限を付与
+# github-actions[bot] に書き込み権限を付与
 permissions:
   contents: write
 
@@ -20,33 +20,52 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          # GITHUB_TOKEN を push に使う（必須）
-          persist-credentials: true
-          fetch-depth: 0
+          persist-credentials: true   # GITHUB_TOKEN を push に使う
+          fetch-depth: 0              # rebaseに必須（履歴が必要）
 
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Build by date or scan all under programs/v2
+      - name: Build schedules (single date or scan all)
         run: |
           python -m pip install -U pip
-          # 依存は標準ライブラリのみ（将来の拡張に備えてpipだけ更新）
           if [ -z "${{ github.event.inputs.date }}" ]; then
             python scripts/schedules_build_all.py
           else
             python scripts/schedules_build.py --date "${{ github.event.inputs.date }}"
           fi
 
-      - name: Commit & push
+      - name: Commit & push with rebase
+        shell: bash
         run: |
-          git config user.name "github-actions[bot]"
+          set -e
+          git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          # 現在のブランチ名（例: main）
+          BRANCH="$(git rev-parse --abbrev-ref HEAD)"
+
+          # 先に最新を取り込む（他ジョブ更新対策）
+          git fetch origin "$BRANCH"
+          git pull --rebase origin "$BRANCH" || {
+            echo "::warning::Rebase failed; will fall back to creating a PR branch."
+            FALLBACK=1
+          }
+
           git add public/schedules/v1/
-          # 差分なしでも失敗しない
           git commit -m "schedules_v1 build" || echo "no changes to commit"
-          # 変更があるときだけ push（エラー時もジョブを落とさない）
-          if [ -n "$(git log -1 --pretty=%B | grep schedules_v1)" ]; then
-            git push origin HEAD:${GITHUB_REF_NAME} || git push
+
+          if [ "${FALLBACK:-0}" -eq 0 ]; then
+            # rebase成功→そのままpush
+            git push origin "HEAD:${BRANCH}"
+          else
+            # 競合などでrebase失敗→安全に別ブランチへpush（PR運用）
+            SAFE_BRANCH="bot/schedules-v1-${{ github.run_id }}"
+            git checkout -b "$SAFE_BRANCH"
+            git push -u origin "$SAFE_BRANCH"
+
+            echo "::notice::Opened branch $SAFE_BRANCH for PR (rebase failed)."
+            echo "To merge: create a PR from $SAFE_BRANCH to $BRANCH."
           fi
