unified_pipeline.yml を更新

--- a/.github/workflows/unified_pipeline.yml
+++ b/.github/workflows/unified_pipeline.yml
@@ -1,5 +1,5 @@
 # .github/workflows/unified_pipeline.yml
-name: Unified Sims (crawl→integrate→predict)
+name: AAA Unified Sims (crawl→integrate→predict)
 
 on:
   workflow_dispatch:
